@@ -171,24 +171,21 @@ sub pandora_sendmail {                  # added in 2.0 version
 ##########################################################################
 
 sub is_numeric {
-	$x = $_[0];
-	if (!defined ($x)){
+	my $val = $_[0];
+	
+	if (!defined($val)){
 		return 0;
 	}
-	if ($x eq ""){
-		return 0;
-	}
-	# Integer ?
-	if ($x =~ /^-?\d/) {
-		return 1;
-	}
-	# Float ?
-	if ($x =~ /^-?\d*\./){
-		return 1;
-	}
-	# If not, this thing is not a number
-	return 0;
-}
+	
+    my $DIGITS = qr{ \d+ (?: [.] \d*)? | [.] \d+ }xms;
+    my $SIGN   = qr{ [+-] }xms;
+    my $NUMBER = qr{ ($SIGN?) ($DIGITS) }xms;
+    if ( $val !~ /^${NUMBER}$/ ) {
+    	return 0;   #Non-numeric
+    } else {
+        return 1;   #Numeric
+    }
+} 
 
 ##########################################################################
 # SUB md5check (param_1, param_2)
